Finally fixed gap on the right side of body

--- a/style.css
+++ b/style.css
@@ -1,36 +1,45 @@
 * {
     font-family: 'Rubik' sans-serif;
-}
-
-body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background-color: #1f2937;
+    box-sizing: border-box;
 }
 
 html{
-    overflow-x: hidden;
+    min-height: 100%;
+    background-color: #1f2937;
+}
+
+body {
+    margin: 0;
 }
 
 header {
     width: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    margin: 10px;
+    margin: 0;
 }
 
-header li, a, h3{
+header li, header a, header h3{
     list-style: none;
     text-decoration: none;
     color: #fff;
     font-weight: 500;
 }
 
+header a:hover{
+   color:#3882f6
+}
+
 .logo {
-    font-size: 25px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 16em;
+    font-weight: 800;
+    text-transform: uppercase;
 }
 
 nav {
@@ -47,41 +56,55 @@ nav ul {
 
 .navlinks {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 54px;
+}
+
+.section1container {
+    width: 85%;
+    height: 100%;
+    margin: 3em auto 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+@media (max-width: 1200px) {
+    .section1container{
+        flex-direction: column;
+    }
 }
 
 .section1{
     display: flex;
     align-items: center;
-    padding: 100px;
+    padding: 50px;
     background-color: #1f2937;
-    gap: 5px;
-}
-
-.container-left, .container-right {
-    width: 40%;
-    display: flex;
 }
 
 .container-left {
+    margin: 3em 2em 3em 5em;
+    width: 40vw;
+    display: flex;
     flex-direction: column;
-    padding: 0 8rem;
-}
-
-.container-left h3, p {
-    color: #fff;
-    margin-top: 30px;
+    justify-content: center;
 }
 
 .container-left h3 {
     font-size: 48px;
-    font-weight: bold;
-    margin-top: 0;
-    margin-bottom: 0;
+    color: #fafafa;
+    margin: 0;
 }
 
 .container-left p {
-    font-size: 18px;
+    margin-top: 1em;
+    font-size: 1.1em;
+    line-height: 1.4em;
+    text-align: justify;
+    color: #fafafa;
 }
 
 .submit {
@@ -96,24 +119,34 @@ nav ul {
 }
 
 .container-right {
-    width: auto;
-    margin-left: auto;
-    margin-right: 0;
+    width: 50vw;
+    margin: 3em 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container-right img {
+    border-radius: 10px;
 }
 
 .section2 {
-    width: 100%;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     background-color: #fafafa;
-    margin: 0;
-    padding: 0;
+    min-width: 100%;
+}
+
+.section2container {
+    text-align: center;
 }
 
 .img-container {
     display: flex;
-    justify-content: center;
-    gap: 52px;
-    padding: 25px;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 2.5rem;
+    flex-wrap: wrap;
 }
 
 .motto-header{
@@ -123,8 +156,16 @@ nav ul {
     padding-top: 50px;
 }
 
+.img-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1 1 0px;
+}
+
 .img-box {
-    max-width: 200px;
+    width: 200px;
+    margin: 1em 2em 0 2em;
 }
 
 .img-container p {
@@ -155,18 +196,23 @@ blockquote p {
 }
 
 .section4 {
-    margin: 100px 150px;
-    padding: 20px;
     background-color: #3882f6;
-    border-radius: 10px;
+    width: 60em;
+    padding: 2em 0;
+    border-radius: 0.5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 0 0.2em;
 }
 
 .calltoaction{
-    color: #fafafa;
-    text-align: left;
-    margin: 10px 300px;
-    padding: 0;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #fafafa;
+    margin: 10px 300px;
+    padding: 0 2em 0 4em;
 }
 
 .calltoaction h2+p {
